tests/lean/unique_instances.lean.expected.out
unique_instances.lean:6:0: error: ambiguous class-instance resolution, there is more than one solution
  @prod.is_inhabited A A H₂ H₂
and
  @prod.is_inhabited A A H₂ H₁
